DFG worklist scanning should not treat the key as a separate entity https://bugs.webkit.org/show_bug.cgi?id=132167

Reviewed by Mark Hahnenberg.

This simplifies the interface to the GC and will enable more optimizations.

* dfg/DFGCompilationKey.cpp:
(JSC::DFG::CompilationKey::visitChildren): Deleted.
* dfg/DFGCompilationKey.h:
* dfg/DFGPlan.cpp:
(JSC::DFG::Plan::visitChildren):
* dfg/DFGWorklist.cpp:
(JSC::DFG::Worklist::visitChildren):



Canonical link: https://commits.webkit.org/150227@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167814 268f45cc-cd09-0410-ab3c-d52691b4dbfc